--- a/sass/main.css
+++ b/sass/main.css
@@ -423,7 +423,7 @@ a {
 @media screen and (min-width: 320px) {
   .header__library .container {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/layout/library/library-header-mobile.png");
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/layout/library/library-header-mobile.png");
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url("../images/layout/library/library-header-mobile.png");
     background-repeat: no-repeat;
     background-size: cover;
     border: 1px solid black;
@@ -436,14 +436,14 @@ a {
 @media screen and (min-width: 768px) {
   .header__library .container {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/layout/library/library-header-tablet.png");
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/layout/library/library-header-tablet.png");
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url("../images/layout/library/library-header-tablet.png");
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header__library .container {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/layout/library/library-header-desktop.png");
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/layout/library/library-header-desktop.png");
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url("../images/layout/library/library-header-desktop.png");
   }
 }
 
