--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 320px) {
   .header .container {
     // background: rgba(0, 0, 0, 0.56);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%),
       url("../images/layout/index/header-mobile.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -93,7 +93,7 @@
     margin-left: 20px;
     font-size: 14px;
     line-height: 1.142;
-    color: #ff001b;
+    color: #B92F2C;
     // display: none;
   }
 }
