--- a/sass/layout/_modal-cart.scss
+++ b/sass/layout/_modal-cart.scss
@@ -41,7 +41,7 @@
 
   .vote-average {
     display: inline-flex;
-    background-color: #ff6b01;
+    background-color: #B92F2C;
     width: 36px;
     height: 16px;
     border-radius: 5px;
